# PoseNet6D-Deep-Segmentation-and-Geometric-Algorithms-for-Real-World-Object-Localization

./: 6D_Pose_Estimation_method3_part1.py  6D_pose_estimation_method3_part2.cpp  CMakeLists.txt  FEC.h  README.md  camera_task.cpp  camera_task.hpp  config_file.cpp  config_file.hpp  depth_to_cloud.cpp  depth_to_cloud.hpp  entire_scene.pcd  iterative_closest_point.hpp  masked_object.pcd  rs_camera.cpp  rs_camera.hpp
